Changelog
=========

3.6.8 (unreleased)
------------------

- Refactored the ``ck_ruid_to_url`` transform to use plone.app.uuid to transform
  UIDs to URLs. This avoids using reference_catalog in favor of portal_catalog
  and appears to fix issues with Dexterity types not available through the
  reference_catalog.
  [dokai]

3.6.7 (2012-08-20)
------------------

- take care of external stylesheets registered with an absolute URL.
  [gotcha]

- fix plugins (add migration)
  [kiorky]

- refresh translations
  [kiorky]

- translate styles menu
  [kiorky]

3.6.6 (2012-07-05)
------------------

- Fix default value for images
  [kai.hoppert@tomcom.de]

- Add a duplicate directory for ckeditor sources: it needs a more ambitious
  patch but fix a development installation
  [kiorky]

3.6.5 (2012-07-04)
------------------

- Fix missing directory in 3.6.4 release
  [encolpe]

3.6.4 (2012-07-03)
------------------

- Fix missing include for rst files in the manifest
  [encolpe]

- Version the latest known working ckeditor commited in browser/ckeditor
  [kiorky]

3.6.3 (2012-07-03)
------------------

- Don't show ckeditor if html is not in the allowable content types of the field.
  This fixes integration with Products.Poi where the details field of a
  PoiIssue allows only text/x-web-intelligent by default.
  [vincentfretin]

- Fixed the finder to honor the "Allow folder creation" option.
  [dokai]

- Added i18n support
  [giacomos]

- Added Italian translation
  [giacomos]

- Fix language configuration according to plone_portal_state.language()
  [toutpt]

- Add French translation
  [toutpt]

- Add z3c.autoinclude targeted to Plone
  [toutpt]

3.6.2 (2011-12-12)
------------------

- Describe in README how to release to ensure ``ckeditor`` code is included in
  the egg.
  [gotcha]


3.6.2b2 (2011-12-12)
--------------------

- Nothing changed yet.


3.6.2b1 (2011-12-12)
--------------------

- use ckeditor 3.6.2
  [spereverde]
